--- a/FrontEnd/src/index.css
+++ b/FrontEnd/src/index.css
@@ -1,3 +1,8 @@
 *{
   font-family: 'Poppins', sans-serif;
 }
+@media (max-width: 768px) {
+  .Toastify__toast-container {
+    display: none !important;
+  }
+}
