--- a/FrontEnd/src/components/navbar.css
+++ b/FrontEnd/src/components/navbar.css
@@ -317,8 +317,9 @@
     gap: 15px;
   }
   
-  .account-btn button {
-      display: none;
+  
+  .navbar-container .account button {
+      display: none !important;
   }
   
   .account-img {
